feat: 完善HR模块、文件上传存储功能及系统优化
- 新增文件上传存储模块（本地/阿里云OSS/天翼云OSS）
- HR模块：考勤记录、员工管理、入职申请功能完善
- 前端：路由重构、权限管理优化
- 数据库升级脚本：v2.10-v2.14版本迭代
- 系统：审计日志、配置管理、菜单权限优化